new icons to bottom navbar

--- a/profile/index.html
+++ b/profile/index.html
@@ -71,9 +71,10 @@
                 <div class="dropdown">
                   <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                    Create post
+                    +
                   </button>
                   <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/profile/edit.html">Edit Profile</a></li>
                     <li><a class="dropdown-item" href="/content/createPost.html">Create post</a></li>
                     <li><a class="dropdown-item" href="/content/editPost.html">Update post</a></li>
                     <li><a class="dropdown-item" href="/content/deletePost.html">Delete post</a></li>
@@ -203,21 +204,21 @@
             </p>
             <li class="nav-item">
               <a class="nav-link" href="/profile">
-                <i class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"></i>
-              </a>
-            </li>
+                  <i class="fas fa-user fa-lg fa-2x d-md-none d-lg-none text-primary"></i> </a>
+          </li>
 
-            <li class="nav-item">
+          <li class="nav-item">
               <a class="nav-link" href="/content/createPost.html">
-                <i class="post-icon fas fa-plus-circle fa-3x d-md-none d-lg-none text-primary"></i>
+                  <i class="post-icon fas fa-plus-circle fa-3x d-md-none d-lg-none text-primary"></i>
               </a>
-            </li>
+          </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <i class="fas fa-search fa-2x d-md-none d-lg-none text-primary"></i>
+          <li class="nav-item">
+              <a class="nav-link" href="/feed">
+                  <i class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"></i>
+
               </a>
-            </li>
+          </li>
           </div>
         </ul>
       </div>
