--- a/content/editPost.html
+++ b/content/editPost.html
@@ -31,8 +31,7 @@
                         <a class="btn text-primary shadow-sm mx-1" href="/register/index.html"
                             role="button">Register</a>
                         <!-- Profile and Feed Button -->
-                        <a class="btn-profile btn btn-outline-light d-flex disabled shadow-sm" aria-disabled="true"
-                            role="button" data-bs-toggle="button">Profile</a>
+                        <a class="btn btn-outline-primary shadow-sm mx-1" href="/profile" role="button">Profile</a>
 
                         <a class="btn btn-outline-primary shadow-sm mx-1" href="/feed" role="button">Feed</a>
                     </div>
@@ -111,8 +110,7 @@
                             </p>
                             <li class="nav-item">
                                 <a class="nav-link" href="/profile">
-                                    <i class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"></i>
-                                </a>
+                                    <i class="fas fa-user fa-lg fa-2x d-md-none d-lg-none text-primary"></i> </a>
                             </li>
 
                             <li class="nav-item">
@@ -122,8 +120,9 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#">
-                                    <i class="fas fa-search fa-2x d-md-none d-lg-none text-primary"></i>
+                                <a class="nav-link" href="/feed">
+                                    <i class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"></i>
+
                                 </a>
                             </li>
                         </div>
