--- a/feed/index.html
+++ b/feed/index.html
@@ -51,7 +51,7 @@
   </div>
 
   <!-- posts section -->
-  <div id="post" class="container-fluid mb-5 mt-5" >
+  <div id="post" class="container-fluid mb-5 mt-5">
     <div class="row">
       <div class="col-12 col-sm-4 mb-3">
         <div class="card pr-2 pl-2">
@@ -166,9 +166,8 @@
             &copy; 2023 Boho Styles
           </p>
           <li class="nav-item">
-            <a class="nav-link" href="../profile/index.html">
-              <i class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"></i>
-            </a>
+            <a class="nav-link" href="/profile">
+              <i class="fas fa-user fa-lg fa-2x d-md-none d-lg-none text-primary"></i> </a>
           </li>
 
           <li class="nav-item">
@@ -178,8 +177,9 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="fas fa-search fa-2x d-md-none d-lg-none text-primary"></i>
+            <a class="nav-link" href="/feed">
+              <i class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"></i>
+
             </a>
           </li>
         </div>
