--- a/single-post/index.html
+++ b/single-post/index.html
@@ -72,8 +72,7 @@
             </p>
             <li class="nav-item">
               <a class="nav-link" href="/profile">
-                <i class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"></i>
-              </a>
+                <i class="fas fa-user fa-lg fa-2x d-md-none d-lg-none text-primary"></i> </a>
             </li>
 
             <li class="nav-item">
@@ -83,8 +82,9 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="#">
-                <i class="fas fa-search fa-2x d-md-none d-lg-none text-primary"></i>
+              <a class="nav-link" href="/feed">
+                <i class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"></i>
+
               </a>
             </li>
           </div>
