added update profile handlers and html

--- a/content/createPost.html
+++ b/content/createPost.html
@@ -78,13 +78,11 @@
                                     placeholder="Write your post here..."></textarea>
                             </div>
                             <div class="mb-3">
-                                <label for="media" class="form-label"></label>
-                                <label for="tags">Insert img from URL</label>
+                                <label for="media" class="form-label">Insert img from URL</label>
                                 <input class="form-control border-secondary mb-2" id="media" type="url" name="media"
                                     placeholder="Insert URL here..."></input>
                             </div>
-                            <label for="title" class="form-label"></label>
-                            <label for="tags">Tags</label>
+                            <label for="tags" class="form-label">Tags</label>
                             <input class="form-control border-secondary mb-2" id="tags" type="text" name="tags"
                                 placeholder="Insert tags..."></input>
 
