--- a/content/editPost.html
+++ b/content/editPost.html
@@ -65,9 +65,7 @@
                         </div>
 
                         <form id="editPost" class="mb-5">
-
-                            <label for="title" class="form-label"></label>
-                            <label for="title">Post Title</label>
+                            <label for="title" class="form-label">Post Title</label>
                             <input class="form-control border-dark" id="title" type="text" name="postTitle" required
                                 placeholder="Post title..." maxlength="30"></input>
 
@@ -77,13 +75,11 @@
                                     placeholder="Write your post here..."></textarea>
                             </div>
                             <div class="mb-3">
-                                <label for="media" class="form-label"></label>
-                                <label for="tags">Insert img from URL</label>
+                                <label for="media" class="form-label">Insert img from URL</label>
                                 <input class="form-control border-secondary mb-2" id="media" type="url" name="media"
                                     placeholder="Insert URL here..."></input>
                             </div>
-                            <label for="title" class="form-label"></label>
-                            <label for="tags">Tags</label>
+                            <label for="tags" class="form-label">Tags</label>
                             <input class="form-control border-secondary mb-2" id="tags" type="text" name="tags"
                                 placeholder="Insert tags..."></input>
 
