--- a/profile/edit.html
+++ b/profile/edit.html
@@ -8,8 +8,7 @@
     <meta name="SoMe Styles Edit profile " content="User can edit profile" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="stylesheet" href="../dist/css/index.css" />
-    <script src="/scripts/posts/create.mjs" type="module" defer></script>
-    <script src="/scripts/index.mjs" type="module" defer></script>
+    <script src="/scripts/handlers/editProfile.mjs" type="module" defer></script>
     <title>SoMe Styles | Edit profile </title>
 </head>
 
@@ -46,186 +45,84 @@
                             class="profile-image mb-2 shadow rounded-circle object-fit-contain border border-2"
                             width="200px" height="200px" />
                         <h1 class="mb-3 display-5 text-secondary">User Name</h1>
-                        <div class="followers d-flex">
-                            <p class="h6 mb-2 text-dark">
-                                Following: 100 | Followers: 200
-                            </p>
-                        </div>
                     </div>
 
                     <div class="container">
                         <div class="row align-items-center">
                             <div class="d-flex justify-content-center align-items-center">
-                                <!-- follow btn -->
-                                <button type="button" class="btn btn-secondary shadow-sm mb-2" disabled>
-                                    Follow
-                                </button>
-                            </div>
-                        </div>
-                    </div>
+
+                                <!-- Edit profile -->
+                                <div class="container mb-5">
+                                    <div class="container mt-5 mb-4">
+                                        <div class="row">
+                                            <div class="d-flex align-items-center justify-content-center">
+                                                <h2>Edit profile</h2>
+                                            </div>
+
+                                            <form id="editProfile" class="mb-5" method="POST" action="">
+                                                <label for="profileName">Name</label>
+                                                <input class="form-control border-dark mb-2" id="profileName"
+                                                    type="text" name="profileName" placeholder="" disabled></input>
+                                                <label for="profileEmail">Email</label>
+                                                <input class="form-control border-dark mb-2" id="profileEmail"
+                                                    type="email" name="profileEmail" placeholder="" disabled></input>
+
+                                                <label for="banner">Banner</label>
+                                                <input class="form-control border-dark mb-2" id="banner" type="url"
+                                                    name="banner" placeholder="Insert URL..."></input>
 
 
-                    <div class="container">
-                        <div class="row align-items-center">
-                            <div class="d-flex justify-content-center align-items-center">
-                                <!-- post btn -->
-                                <div class="dropdown">
-                                    <button class="btn btn-secondary dropdown-toggle" type="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
-                                        Create post
-                                    </button>
-                                    <ul class="dropdown-menu">
-                                        <li><a class="dropdown-item" href="/content/createPost.html">Create post</a>
-                                        </li>
-                                        <li><a class="dropdown-item" href="/content/editPost.html">Update post</a></li>
-                                        <li><a class="dropdown-item" href="/content/deletePost.html">Delete post</a>
-                                        </li>
-                                    </ul>
+                                                <div class="mb-3">
+                                                    <label for="avatar" class="form-label">Avatar</label>
+                                                    <input class="form-control border-secondary mb-2" id="avatar"
+                                                        type="url" name="avatar" placeholder="Insert URL..."></input>
+                                                </div>
+
+                                                <div class="d-grid gap-2 mb-2">
+
+                                                    <a href="/profile" class="btn btn-secondary" type="submit">
+                                                        Edit profile
+                                                        </button> </a>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <!-- posts section -->
-        <div class="container mb-5">
-            <h2>Edit profile page</h2>
-            <div class="row">
-                <div class="col-12 col-sm-4 mb-3">
-                    <div class="card pr-2 pl-2">
-                        <img src="../img/post-1.jpg" class="img-thumbnail" alt="post image 1" />
-                        <div class="card-body">
-                            <h5 class="card-title">Post title 1</h5>
-                            <p class="card-text text-truncate">
-                                This is a wider card with supporting text below as a natural
-                                lead-in to additional content. This content is a little bit
-                                longer.
-                            </p>
-                            <p class="card-text">
-                                <small class="text-muted">Last updated 3 mins ago</small>
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                        <!-- Bottom navbar menu (@chatGPT) -->
+                        <nav class="navbar navbar-bottom navbar-expand fixed-bottom navbar-light bg-secondary">
+                            <div class="container justify-content-around">
+                                <ul class="navbar-nav">
+                                    <div class="icon-container d-flex align-items-center">
+                                        <p
+                                            class="h6 copyright d-none d-md-block d-lg-block m-3 align-items-center text-primary">
+                                            &copy; 2023 Boho Styles
+                                        </p>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/profile">
+                                                <i class="fas fa-user fa-lg fa-2x d-md-none d-lg-none text-primary"></i>
+                                            </a>
+                                        </li>
 
-                <div class="col-12 col-sm-4 mb-3">
-                    <div class="card pr-2 pl-2">
-                        <img src="../img/post-1.jpg" class="img-thumbnail" alt="post image 2" />
-                        <div class="card-body">
-                            <h5 class="card-title">Post title 2</h5>
-                            <p class="card-text text-truncate">
-                                This is a wider card with supporting text below as a natural
-                                lead-in to additional content. This content is a little bit
-                                longer.
-                            </p>
-                            <p class="card-text">
-                                <small class="text-muted">Last updated 3 mins ago</small>
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/content/createPost.html">
+                                                <i
+                                                    class="post-icon fas fa-plus-circle fa-3x d-md-none d-lg-none text-primary"></i>
+                                            </a>
+                                        </li>
 
-                <div class="col-12 col-sm-4 mb-3">
-                    <div class="card pr-2 pl-2">
-                        <img src="../img/post-1.jpg" class="img-thumbnail" alt="post image 4" />
-                        <div class="card-body">
-                            <h5 class="card-title">Post title 3</h5>
-                            <p class="card-text text-truncate">
-                                This is a wider card with supporting text below as a natural
-                                lead-in to additional content. This content is a little bit
-                                longer.
-                            </p>
-                            <p class="card-text">
-                                <small class="text-muted">Last updated 9 mins ago</small>
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="/feed">
+                                                <i class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"></i>
 
-                <div class="col-sm-4 mb-3">
-                    <div class="card pr-2 pl-2">
-                        <img src="../img/post-1.jpg" class="img-thumbnail" alt="post image 4" />
-                        <div class="card-body">
-                            <h5 class="card-title">Post title 4</h5>
-                            <p class="card-text text-truncate">
-                                This is a wider card with supporting text below as a natural
-                                lead-in to additional content. This content is a little bit
-                                longer.
-                            </p>
-                            <p class="card-text">
-                                <small class="text-muted">Last updated 1 day ago</small>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-4 mb-3">
-                    <div class="card pr-2 pl-2">
-                        <img src="../img/post-1.jpg" class="img-thumbnail" alt="post image 5" />
-                        <div class="card-body">
-                            <h5 class="card-title">Post title 5</h5>
-                            <p class="card-text text-truncate">
-                                This is a wider card with supporting text below as a natural
-                                lead-in to additional content. This content is a little bit
-                                longer.
-                            </p>
-                            <p class="card-text">
-                                <small class="text-muted">Last updated 3 days ago</small>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-4 mb-3">
-                    <div class="card pr-2 pl-2">
-                        <img src="../img/post-1.jpg" class="img-thumbnail" alt="post image 1" />
-                        <div class="card-body">
-                            <h5 class="card-title">Post title 6</h5>
-                            <p class="card-text text-truncate">
-                                This is a wider card with supporting text below as a natural
-                                lead-in to additional content. This content is a little bit
-                                longer.
-                            </p>
-                            <p class="card-text">
-                                <small class="text-muted">Last updated 4 days ago</small>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Bottom navbar menu (@chatGPT) -->
-        <nav class="navbar navbar-bottom navbar-expand fixed-bottom navbar-light bg-secondary">
-            <div class="container justify-content-around">
-                <ul class="navbar-nav">
-                    <div class="icon-container d-flex align-items-center">
-                        <p class="h6 copyright d-none d-md-block d-lg-block m-3 align-items-center text-primary">
-                            &copy; 2023 Boho Styles
-                        </p>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/profile">
-                                <i class="fas fa-user fa-lg fa-2x d-md-none d-lg-none text-primary"></i> </a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="/content/createPost.html">
-                                <i class="post-icon fas fa-plus-circle fa-3x d-md-none d-lg-none text-primary"></i>
-                            </a>
-                        </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="/feed">
-                                <i class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"></i>
-
-                            </a>
-                        </li>
-                    </div>
-                </ul>
-            </div>
-        </nav>
+                                            </a>
+                                        </li>
+                                    </div>
+                                </ul>
+                            </div>
+                        </nav>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
