--- a/profile/index.html
+++ b/profile/index.html
@@ -77,7 +77,7 @@
                     <li><a class="dropdown-item" href="/profile/edit.html">Edit Profile</a></li>
                     <li><a class="dropdown-item" href="/content/createPost.html">Create post</a></li>
                     <li><a class="dropdown-item" href="/content/editPost.html">Update post</a></li>
-                    <li><a class="dropdown-item" href="/content/deletePost.html">Delete post</a></li>
+                    <li><a class="dropdown-item" href="/content/removePost.html">Delete post</a></li>
                   </ul>
                 </div>
               </div>
@@ -204,21 +204,21 @@
             </p>
             <li class="nav-item">
               <a class="nav-link" href="/profile">
-                  <i class="fas fa-user fa-lg fa-2x d-md-none d-lg-none text-primary"></i> </a>
-          </li>
+                <i class="fas fa-user fa-lg fa-2x d-md-none d-lg-none text-primary"></i> </a>
+            </li>
 
-          <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="/content/createPost.html">
-                  <i class="post-icon fas fa-plus-circle fa-3x d-md-none d-lg-none text-primary"></i>
+                <i class="post-icon fas fa-plus-circle fa-3x d-md-none d-lg-none text-primary"></i>
               </a>
-          </li>
+            </li>
 
-          <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link" href="/feed">
-                  <i class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"></i>
+                <i class="fas fa-home fa-lg fa-2x d-md-none d-lg-none text-primary"></i>
 
               </a>
-          </li>
+            </li>
           </div>
         </ul>
       </div>
