function register and registration

--- a/register/index.html
+++ b/register/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   <link rel="stylesheet" href="../dist/css/index.css" />
-  <script src="/scripts/pages/registration.mjs" type="module" defer></script>
+  <script src="/scripts/handlers/index.mjs" type="module" defer></script>
 
   <title>Sign up | Boho Styles</title>
 </head>
@@ -37,7 +37,7 @@
                     <h1 class="text-center form-title mb-2 text-dark">Sign up</h1>
 
                     <!-- submission form data -->
-                    <form id="regForm" action="/auth/register" method="post">
+                    <form id="regForm">
 
                       <p class="m-0 text-dark">Your user name</p>
                       <div class="form-floating mb-3 text-dark opacity-50">
