setLoginFormListener and setRegisterFormListener
Added index.mjs to handlers. Renamed 'authentication' to 'login'. Redirect all pages to right login page

--- a/content/createPost.html
+++ b/content/createPost.html
@@ -28,13 +28,10 @@
                             height="auto" /></a>
                     <div class="ml-auto d-flex align-items-center">
                         <!-- login and register Button -->
-                        <a class="btn shadow-sm mx-1 text-primary" href="/authentication/index.html"
-                            role="button">Login</a>
-                        <a class="btn text-primary shadow-sm mx-1" href="/register/index.html"
-                            role="button">Register</a>
+                        <a class="btn shadow-sm mx-1 text-primary" href="/login" role="button">Login</a>
+                        <a class="btn text-primary shadow-sm mx-1" href="/register" role="button">Register</a>
                         <!-- Profile and Feed Button -->
-                        <a class="btn btn-outline-primary shadow-sm mx-1" href="/profile/index.html"
-                            role="button">Profile</a>
+                        <a class="btn btn-outline-primary shadow-sm mx-1" href="/profile/" role="button">Profile</a>
 
                         <a class="btn btn-outline-primary shadow-sm mx-1" href="/feed" role="button">Feed</a>
                     </div>
