--- a/single-post/index.html
+++ b/single-post/index.html
@@ -23,15 +23,15 @@
         <div class="ml-auto d-flex align-items-center">
 
           <!-- login and register Button -->
-          <a class="btn shadow-sm mx-1 text-primary" href="/authentication/index.html" role="button">Login</a>
-          <a class="btn text-primary shadow-sm mx-1" href="/register/index.html" role="button">Register</a>
+          <a class="btn shadow-sm mx-1 text-primary" href="/login" role="button">Login</a>
+          <a class="btn text-primary shadow-sm mx-1" href="/register" role="button">Register</a>
 
           <!-- Profile and Feed Button -->
-          <a class="btn-profile btn btn-outline-light d-flex disabled shadow-sm" aria-disabled="true" role="button"
-            data-bs-toggle="button">Profile</a>
-
-          <a class="btn btn-outline-primary shadow-sm mx-1" href="/feed" role="button">Feed</a>
+          <a class="btn btn-outline-primary shadow-sm mx-1" href="/profile/" role="button">Profile</a>
         </div>
+
+        <a class="btn btn-outline-primary shadow-sm mx-1" href="/feed" role="button">Feed</a>
+      </div>
       </div>
     </nav>
     <h1 class="text-center form-title mb-2 text-primary mt-5 text-dark">Single post</h1>
