--- a/feed/index.html
+++ b/feed/index.html
@@ -21,10 +21,10 @@
       </a>
       <div class="ml-auto d-flex align-items-center">
         <!-- login and register Button -->
-        <a class="btn shadow-sm mx-1 text-primary" href="/authentication/index.html" role="button">Login</a>
-        <a class="btn text-primary shadow-sm mx-1" href="/register/index.html" role="button">Register</a>
+        <a class="btn shadow-sm mx-1 text-primary" href="/login" role="button">Login</a>
+        <a class="btn text-primary shadow-sm mx-1" href="/register" role="button">Register</a>
         <!-- Feed and profile Button -->
-        <a class="btn btn-outline-primary shadow-sm mx-1" href="../profile/index.html" role="button">Profile</a>
+        <a class="btn btn-outline-primary shadow-sm mx-1" href="/profile" role="button">Profile</a>
 
         <a class="btn-profile btn btn-outline-light d-flex disabled shadow-sm" aria-disabled="true" role="button"
           data-bs-toggle="button">Feed</a>
@@ -41,8 +41,8 @@
         Sort Options
       </button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Username</a></li>
-        <li><a class="dropdown-item" href="#">Newest posts</a></li>
+        <li><a class="dropdown-item">Username</a></li>
+        <li><a class="dropdown-item">Newest posts</a></li>
       </ul>
       <button class="btn btn-outline-secondary btn-sm" type="submit">
         Search
@@ -133,7 +133,7 @@
             &copy; 2023 Boho Styles
           </p>
           <li class="nav-item">
-            <a class="nav-link" href="/profile">
+            <a class="nav-link" href="/profile/">
               <i class="fas fa-user fa-lg fa-2x d-md-none d-lg-none text-primary"></i> </a>
           </li>
 
