--- a/profile/index.html
+++ b/profile/index.html
@@ -21,7 +21,7 @@
           <img src="../img/logo-boho.png" alt="logo Boho Styles" class="img-fluid" width="150px" height="auto" /></a>
         <div class="ml-auto d-flex align-items-center">
           <!-- login and register Button -->
-          <a class="btn shadow-sm mx-1 text-primary" href="/authentication/index.html" role="button">Login</a>
+          <a class="btn shadow-sm mx-1 text-primary" href="/login" role="button">Login</a>
           <a class="btn text-primary shadow-sm mx-1" href="/register/index.html" role="button">Register</a>
           <!-- Profile and Feed Button -->
           <a class="btn-profile btn btn-outline-light d-flex disabled shadow-sm" aria-disabled="true" role="button"
