redirected loginform to profile page

--- a/login/index.html
+++ b/login/index.html
@@ -36,7 +36,7 @@
                     <h1 class="text-center form-title mb-2 text-dark">Login</h1>
 
                     <!-- submission form data -->
-                    <form id="loginForm">
+                    <form id="loginForm" action="/profile/index.html" method="post">
 
                       <!-- e-mail -->
                       <p class="m-0 text-dark">E-mail</p>
