receiving object to update post

--- a/content/editPost.html
+++ b/content/editPost.html
@@ -64,7 +64,7 @@
 
                         <form id="updatePost" class="mb-5">
                             <label for="title" class="form-label">Post Title</label>
-                            <input class="form-control border-dark" id="title" type="text" name="postTitle" required
+                            <input class="form-control border-dark" id="title" type="text" name="title" required
                                 placeholder="Post title..." maxlength="30"></input>
 
                             <div class="mb-3">
@@ -108,7 +108,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="/content/createPost.html">
+                                <a class="nav-link" href="/content/editPost.html">
                                     <i class="post-icon fas fa-plus-circle fa-3x d-md-none d-lg-none text-primary"></i>
                                 </a>
                             </li>
