update post by its id success

--- a/content/editPost.html
+++ b/content/editPost.html
@@ -62,7 +62,7 @@
                             <h2>Update post</h2>
                         </div>
 
-                        <form id="updatePost" class="mb-5">
+                        <form id="createPost" class="mb-5">
                             <label for="title" class="form-label">Post Title</label>
                             <input class="form-control border-dark" id="title" type="text" name="title" required
                                 placeholder="Post title..." maxlength="30"></input>
