--- a/feed/index.html
+++ b/feed/index.html
@@ -8,6 +8,7 @@
   <meta name="SoMe Styles Feed " content="The feed page for SoMe Styles" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   <link rel="stylesheet" href="../dist/css/index.css" />
+  <script src="/scripts/handlers/search.mjs" type="module" defer></script>
   <script src="/scripts/pages/feedPosts.mjs" type="module" defer></script>
   <title>SoMe Styles | Feed page</title>
 </head>
@@ -36,18 +37,23 @@
   <!-- search bar -->
   <div class="container-fluid d-flex align-items-center justify-content-center mt-3">
     <div class="input-group mx-1">
-      <input class="form-control me-1 border-secondary" type="search" placeholder="Search" aria-label="Search" />
-      <button class="btn btn-outline-secondary dropdown-toggle btn-sm" type="button" data-bs-toggle="dropdown"
+
+      <input id="search" class="form-control me-1 border-secondary" type="search" placeholder="Search here.." aria-label="Search" />
+      <button id="searchBtn" class="btn btn-outline-secondary btn-sm" type="submit">
+        Search
+      </button>
+
+      <!-- filter -->
+      <button class="btn btn-outline-secondary dropdown-toggle btn-sm ml-2" type="button" data-bs-toggle="dropdown"
         aria-expanded="false">
         Sort Options
       </button>
+    
       <ul class="dropdown-menu">
         <li><a class="dropdown-item">Username</a></li>
         <li><a class="dropdown-item">Newest posts</a></li>
       </ul>
-      <button class="btn btn-outline-secondary btn-sm" type="submit">
-        Search
-      </button>
+      
     </div>
   </div>
 
