--- a/content/editPost.html
+++ b/content/editPost.html
@@ -62,7 +62,7 @@
                             <h2>Update post</h2>
                         </div>
 
-                        <form id="createPost" class="mb-5">
+                        <form id="updatePost" class="mb-5">
                             <label for="title" class="form-label">Post Title</label>
                             <input class="form-control border-dark" id="title" type="text" name="title" required
                                 placeholder="Post title..." maxlength="30"></input>
@@ -108,7 +108,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="/content/editPost.html">
+                                <a class="nav-link" href="/content/createPost.html">
                                     <i class="post-icon fas fa-plus-circle fa-3x d-md-none d-lg-none text-primary"></i>
                                 </a>
                             </li>
