--- a/feed/index.html
+++ b/feed/index.html
@@ -35,8 +35,7 @@
 <main>
   <!-- search bar -->
   <div class="container-fluid d-flex align-items-center justify-content-center mt-3">
-    <div class="input-group mx-1">
-
+<form id="searchForm" class="input-group mx-1">
       <input id="search" class="form-control me-1 border-secondary" type="search" placeholder="Search here.."
         aria-label="Search" />
       <button id="searchBtn" class="btn btn-outline-secondary btn-sm" type="submit">
@@ -53,8 +52,7 @@
         <li><a class="dropdown-item">Username</a></li>
         <li><a class="dropdown-item">Newest posts</a></li>
       </ul>
-
-    </div>
+</form>
   </div>
 
   <!-- posts section -->
