error message on login page

--- a/login/index.html
+++ b/login/index.html
@@ -63,11 +63,13 @@
                           Login
                         </button>
                       </div>
-                      <a href="/register" class="d-flex align-items-center justify-content-center text-dark">
-                        Register
-                      </a>
-                    </form>
-
+                    </form> 
+                    <a href="/register" class="d-flex align-items-center justify-content-center text-dark">
+                      Register
+                    </a>
+                    <div id="loginErrorMessage" class="alert alert-danger d-none" role="alert">
+                      Log in requires a registered user.
+                    </div>
                   </div>
                 </div>
               </div>
